--- a/style.css
+++ b/style.css
@@ -1,49 +1,89 @@
 @import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
 
 .work-sans-font {
-  font-family: "Work Sans", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: 400;
-  font-style: normal;
+    font-family: 'Work Sans', sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
 }
 
 /* shared styles */
-.display-flex{
-  display: flex;
+
+.display-flex {
+    display: flex;
 }
 
-
 /* dark-02 */
-.text-gray{
-  color: rgb(66, 66, 66);
+.text-gray {
+    color: rgb(66, 66, 66);
 }
 
 /* dark 03 */
-.text-light-gray{
-  color: rgb(114, 114, 114);
+.text-light-gray {
+    color: rgb(114, 114, 114);
 }
 
-.bg-light{
-  background: rgba(255, 144, 14, 0.1);
+.bg-light {
+    background: rgba(255, 144, 14, 0.1);
+}
+
+.btn-primary {
+  background-color: #ff900e;
+  color: #fff;
+  font-size: 1.25rem;
+  font-weight: 600;
+  padding: 20px 30px;
+  border: none;
+  border-radius: 8px;
 }
 
 
-/* header styles */
+
+
 
 /* navbar styles */
+.brand {
+    color: rgb(19, 19, 19);
+    font-size: 3rem;
+    font-weight: 700;
+}
+
 .nav-item {
-  list-style: none;
-  margin-right: 30px;
+    list-style: none;
+    margin-right: 30px;
 }
 .nav-link {
-  text-decoration: none;
-  font-size: 18px;
-  font-weight: 500;
+    text-decoration: none;
+    font-size: 18px;
+    font-weight: 500;
 }
-.navbar {
-  justify-content: space-between;
-  max-width: 1440px;
-  /* margin: 0 auto; */
+.navbar, .banner {
+    justify-content: space-between;
+    align-items: center;
+    max-width: 1440px;
+    /* margin: 0 auto; */
+    margin-inline: auto;
+}
+
+/* banner releted styles */
+
+.banner-content {
+  max-width: 850px;
   margin-inline: auto;
-  
+  text-align: center;
+  margin-bottom: 50px;
+}
+.banner-title {
+  font-weight: 700;
+  font-size: 4rem;
+}
+.banner-image{
+  width: 100%;
+}
+
+/* responsive media query */
+@media screen and (max-width: 676px) {
+    .navbar, .nav-link {
+      flex-direction: column;
+    }
 }
