--- a/style.css
+++ b/style.css
@@ -13,6 +13,10 @@
     display: flex;
 }
 
+.text-primary {
+  color: #ff900e;
+}
+
 /* dark-02 */
 .text-gray {
     color: rgb(66, 66, 66);
@@ -37,6 +41,19 @@
   border-radius: 8px;
 }
 
+main{
+  max-width: 1440px;
+  margin-inline: auto;
+}
+
+main > section{
+  margin-top: 130px;
+}
+
+.section-title {
+  font-size: 2.8rem;
+  font-weight: 700;
+}
 
 
 
@@ -66,7 +83,9 @@
 }
 
 /* banner releted styles */
-
+ .banner {
+  padding-bottom: 30px;
+ }
 .banner-content {
   max-width: 850px;
   margin-inline: auto;
@@ -81,9 +100,57 @@
   width: 100%;
 }
 
-/* responsive media query */
-@media screen and (max-width: 676px) {
-    .navbar, .nav-link {
+/* team and feature related styles */
+.teams {
+  align-items: center;
+}
+
+.team-image-container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 24px;
+}
+
+.our-features {
+  max-width:  537px;
+  margin-left: 73px;
+}
+
+
+
+#quick-list {
+  font-weight: 500;
+}
+
+
+
+
+
+
+
+/* responsive media query for mobile device */
+@media screen and (max-width: 576px) {
+    .navbar, .nav-link, .teams {
       flex-direction: column;
     }
+
+    .team-image-container {
+      grid-template-columns: repeat(1, 1fr);
+    }
+    .our-features {
+  margin-left: 20px;
+}
+
+}
+
+
+/* responsive media query for medium size device */
+
+@media screen and (min-width: 576px) and (max-width: 992px) {
+  .teams {
+    flex-direction: column;
+  }
+  .our-features {
+    margin: 50px auto;
+  }
 }
