--- a/style.css
+++ b/style.css
@@ -124,9 +124,11 @@ main > section {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     gap: 20px;
+    margin-top: 20px;
 }
 
 .fact-card {
+    width: 100%;
     box-sizing: border-box;
     border: 1px solid rgb(255, 144, 14);
     border-radius: 8px;
@@ -138,20 +140,39 @@ main > section {
 }
 
 .fact-number {
-  font-size: 2.8rem;
-  font-weight: 600;
-  margin-top: 5px;
-  margin-bottom: 10px;
+    font-size: 2.8rem;
+    font-weight: 600;
+    margin-top: 5px;
+    margin-bottom: 10px;
 }
 
 .fact-name {
-  font-size: 1.25rem;
-  font-weight: 600;
-  margin-top: 10px;
+    font-size: 1.25rem;
+    font-weight: 600;
+    margin-top: 10px;
+}
+
+.facts-title {
+    margin: 0 auto 15px;
 }
 
 .fact-description {
-  max-width: 549px;
+    max-width: 549px;
+}
+
+/* sponsor related styles */
+.sponsor-info {
+    max-width: 540px;
+    margin: 50px auto;
+    text-align: center;
+}
+.sponsor-companies {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+}
+
+.sponsor-companies img {
+    filter: grayscale(100%);
 }
 
 /* responsive media query for mobile device */
@@ -162,8 +183,17 @@ main > section {
         flex-direction: column;
     }
 
-    .team-image-container {
-        grid-template-columns: repeat(1, 1fr);
+    .team-image-container,
+    .facts-container,
+    .sponsor-companies {
+        grid-template-columns: 1fr;
+    }
+    .facts-container {
+        justify-items: center;
+    }
+    .sponsor-companies {
+        gap: 50px;
+        justify-items: center;
     }
     .our-features {
         margin-left: 20px;
@@ -178,5 +208,21 @@ main > section {
     }
     .our-features {
         margin: 50px auto;
+    }
+    .some-facts {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+    .fact-card {
+        width: 100%;
+        padding: 20px;
+    }
+    .sponsor-companies,
+    .facts-container {
+        grid-template-columns: repeat(3, 1fr);
+        gap: 50px;
+        justify-items: center;
     }
 }
