--- a/style.css
+++ b/style.css
@@ -118,6 +118,29 @@ main > section {
     font-weight: 500;
 }
 
+/* featurs section related style */
+.features {
+  gap: 100px;
+  height: 1059;
+}
+
+#feature-section-title {
+    border-left: 5px solid #ff900e;
+    padding-left: 21px;
+}
+.feature-card {
+    padding: 30px;
+    border-radius: 8px;
+    box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.06);
+    background: rgb(255, 255, 255);
+    margin-bottom: 20px;
+}
+.feature-card .feature-title {
+    font-weight: 600;
+    font-size: 1.25rem;
+    margin: 0px auto;
+}
+
 /* some fact releted style */
 
 .facts-container {
@@ -161,6 +184,7 @@ main > section {
 }
 
 /* sponsor related styles */
+
 .sponsor-info {
     max-width: 540px;
     margin: 50px auto;
@@ -176,6 +200,7 @@ main > section {
 }
 
 /* responsive media query for mobile device */
+
 @media screen and (max-width: 576px) {
     .navbar,
     .nav-link,
@@ -190,6 +215,12 @@ main > section {
     }
     .facts-container {
         justify-items: center;
+    }
+    .some-facts {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
     }
     .sponsor-companies {
         gap: 50px;
